# adrf

./: pyproject.toml
adrf/: decorators.py  generics.py  mixins.py  requests.py  serializers.py  shortcuts.py  test.py  utils.py  views.py  viewsets.py
tests/: models.py  serializers.py  test_generics.py  test_mixins.py  test_object_permissions.py  test_serializers.py  test_viewsets.py
typings/async_property-stubs/: __init__.pyi  base.pyi  cached.pyi  loader.pyi  proxy.pyi
